# template-project-py

./: .gitignore  .pre-commit-config.yaml  README.md
app/: .pre-commit-config.yaml  Makefile
package/: pyproject.toml
