[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "copywright"
description = "My package description"
readme = "README.md"
keywords = ["copyright"]
version = "0.0.1"
dependencies = [
  "tomli>=1.1.0; python_version<'3.11'",
  "typing_extensions>=3.10.0; python_version<'3.10'"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "coverage",
  "pre-commit",
  "pytest",
  "tox",
]

[project.scripts]
packagename = "packagename.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
